[tool.poetry]
name = "askmonk"
version = "0.1.0"
description = ""
authors = ["Dheemanth Manur <dheemanthmanur72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
mistralai = "0.1.2"

[tool.poetry.scripts]
askmonk = "askmonk.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
