[tool.poetry]
name = "askmonk"
version = "0.1.0"
description = ""
authors = ["Dheemanth Manur <dheemanthmanur72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
mistralai = "^0.1.2"
llama-index-core = "^0.10.23.post1"
llama-index-embeddings-mistralai = "^0.1.4"
llama-index-llms-mistralai = "^0.1.8"
pymongo = "^4.6.2"
llama-index-vector-stores-mongodb = "^0.1.4"

[tool.poetry.scripts]
askmonk = "askmonk.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"